--- a/package.json
+++ b/package.json
@@ -9,14 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.15.0",
+    "@tanstack/react-query": "^5.14.1",
     "antd": "^5.12.2",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0"
   },
   "devDependencies": {
