--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.2",
     "next": "14.0.4",
     "react": "^18",
+    "react-csv": "^2.2.2",
     "react-dom": "^18",
     "react-icons": "^4.12.0"
   },
