--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-query": "^5.14.1",
     "antd": "^5.12.2",
     "axios": "^1.6.2",
+    "crypto": "^1.0.1",
     "next": "14.0.4",
     "react": "^18",
     "react-csv": "^2.2.2",
